# HB-RF-ETH-ng

./: .clang-format  .gitignore  CHANGELOG.md  CHANGES_ATTEMPTED.md  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  RADIO_SIGNAL_OPTIMIZATION.md  README.md  SECURITY.md  STABILITY_FIXES.md  STABILITY_IMPROVEMENTS.md  a.out  append_version_to_progname.py  archive.json  beta.json  beta3-release-status.json  beta4-release-status.json  build_webui.py  docker-compose.yml  dummy.py  esp32_log.txt  fix.sh  fix_build.sh  fix_conflict.py  generate_release_notes.py  gzip-hotfix-status.json  idf.py  latest.json  ota_upload.py  patch_eth.py  patch_ethernet.py  patch_ethernet2.py  patch_pio_main.py  patch_pio_main2.py  platformio.ini  platformio_build.py  platformio_build19.py  platformio_build2.py  platformio_build20.py  (+30 more)
.Jules/: palette.md
.claude/: settings.local.json
.github/: beta4-trigger.txt  labeler.yml  pull_request_template.md
.jules/: bolt.md  sentinel.md
HB-RF-ETH-ng-2.1.1/: .gitignore  README.md  update_headers.py
alt/: CMakeLists.txt  OTA_UPLOAD.md  TODO_v2.1.1_to_v2.1.4.md  add_dtls_translations.py  append_version_to_progname.py  build_webui.py  generate_release_notes.py  platformio.ini  rename_webui_files.py  update_changelog.py
boards/: sdkconfig.hb-rf-eth
dist_unzip/: index.html  main.css  main.js
docs/: ALT_BUILD_WORKFLOWS.md  ALT_WEBUI_DESIGN_REFERENCE.md  API.md  DTLS_ENCRYPTION_GUIDE.md  DTLS_QUICK_REFERENCE.md  DTLS_README.md  HOTFIX_BETA3_RECOVERY.md  RELEASE_VERSIONING.md  SYSTEM_OVERVIEW_THEME_LOGS.md  TROUBLESHOOTING.md  WEBUI_DESIGN_SYSTEM.md  WEBUI_UPDATES.md  WIKI.md  index.html  openapi.yaml
include/: analyzer.h  dcf.h  dtls_api.h  dtls_encryption.h  ethernet.h  events.h  gps.h  hmframe.h  hmlgw.h  json_helpers.h  led.h  linereader.h  log_manager.h  log_stream.h  mdnsserver.h  metrics.h  monitoring.h  monitoring_api.h  mqtt_handler.h  nextcloud_api.h  nextcloud_client.h  ntpclient.h  ntpserver.h  ota_config.h  pins.h  prometheus.h  proxymanager.h  pushbuttonhandler.h  radiomoduleconnector.h  radiomoduledetector.h  radiomoduledetector_utils.h  rate_limiter.h  rawuartudplistener.h  reset_info.h  rtcdriver.h  secure_utils.h  security_headers.h  semver.h  settings.h  streamparser.h  (+10 more)
main/: CMakeLists.txt  dcf.cpp  ethernet.cpp  events.cpp  gps.cpp  idf_component.yml  led.cpp  log_manager.cpp  log_stream.cpp  main.cpp  metrics.cpp  monitoring.cpp  monitoring_api.cpp  mqtt_handler.cpp  ntpserver.cpp  ota_config.cpp  prometheus.cpp  pushbuttonhandler.cpp  radiomoduleconnector.cpp  rawuartudplistener.cpp  reset_info.cpp  rtcdriver.cpp  settings.cpp  streamparser.cpp  supporter_crl.cpp  sysinfo.cpp  syslog.cpp  system_overview_api.cpp  system_reset.cpp  systemclock.cpp  theme_api.cpp  updatecheck.cpp  validation.cpp  webui.cpp  webui_storage.cpp
(+238 files in other folders)
